// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render custom class name 1`] = `
<div>
  <div
    class="Card_cardStyle__1s6a79j0 Card_radiusStyle_sm__1s6a79j4 raulito"
  />
</div>
`;

exports[`Card should render custom span tag 1`] = `
<div>
  <span
    class="Card_cardStyle__1s6a79j0 Card_radiusStyle_sm__1s6a79j4"
  />
</div>
`;

exports[`Card should render default style 1`] = `
<div>
  <div
    class="Card_cardStyle__1s6a79j0 Card_radiusStyle_sm__1s6a79j4"
  />
</div>
`;

exports[`Card should render lg radius style 1`] = `
<div>
  <div
    class="Card_cardStyle__1s6a79j0 Card_radiusStyle_lg__1s6a79j2"
  />
</div>
`;

exports[`Card should render md radius style 1`] = `
<div>
  <div
    class="Card_cardStyle__1s6a79j0 Card_radiusStyle_md__1s6a79j3"
  />
</div>
`;

exports[`Card should render variant styles 1`] = `
<div>
  <section
    class="Card_cardStyle__1s6a79j0 Card_radiusStyle_xl__1s6a79j1 Card_hoverStyle__1s6a79j5"
  />
</div>
`;

exports[`Card should render withHover style 1`] = `
<div>
  <div
    class="Card_cardStyle__1s6a79j0 Card_radiusStyle_sm__1s6a79j4 Card_hoverStyle__1s6a79j5"
  />
</div>
`;

exports[`Card should render xl radius style 1`] = `
<div>
  <div
    class="Card_cardStyle__1s6a79j0 Card_radiusStyle_xl__1s6a79j1"
  />
</div>
`;
